--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
 	},
 	"dependencies": {
 		"@astrojs/check": "^0.6.0",
+		"@astrojs/react": "^3.3.4",
+		"@types/react": "^18.3.2",
+		"@types/react-dom": "^18.3.0",
+		"embla-carousel-react": "^8.0.4",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"typescript": "^5.4.5"
 	}
 }
