--- a/src/collections/projects.json
+++ b/src/collections/projects.json
@@ -9,7 +9,7 @@
     "name": "Sankliché",
     "description": "Optimisation et déploiement d'une app/plateforme web dédié à l'apprentissage de la langue française",
     "image": "/assets/images/projects/email.ml.png",
-    "url": "https://github.com/khaliev/projet-sankliche"
+    "url": "https://sankliche.applicatif.net/"
   },
   {
     "name": "TravelOn - Hackathon",
