--- a/src/collections/projects.json
+++ b/src/collections/projects.json
@@ -25,7 +25,7 @@
   },
   {
     "name": "Cinegenius",
-    "description": "Création d'une application web qui suggère un film en fonction des préférences d'utilisateur",
+    "description": "Création d'une application web qui suggère un film en fonction des préférences des utilisateurs",
     "image": "/assets/images/projects/Cinegenius.png",
     "url": "http://www.github.com/khaliev/Cinegenius"
   },
